libs/preprocessor/tests/errors/pe19_pragma_unknown/stderr.ansi
[0m[1m[38;5;9merror[PE19][0m[1m: unknown `supress` pragma command[0m
  [0m[36m┌─[0m source.hpp:1:15
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #pragma hemtt [0m[31msupress[0m unknown
  [0m[36m│[0m               [0m[31m^^^^^^^[0m [0m[31munknown #pragma command[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: did you mean `suppress`?
  [0m[36m=[0m [32mtry[0m: suppress

